--- a/package.json
+++ b/package.json
@@ -4,9 +4,20 @@
   "description": "Trying out Electron, probably with Svelte",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "build": "cross-env NODE_ENV=production webpack",
+    "build:dev": "webpack",
+    "start": "yarn build && electron .",
+    "start:dev": "yarn build:dev && electron ."
   },
   "devDependencies": {
-    "electron": "^8.2.3"
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.2",
+    "electron": "^8.2.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "style-loader": "^1.1.4",
+    "svelte": "^3.20.1",
+    "svelte-loader": "^2.13.6",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
